--- a/css/style.css
+++ b/css/style.css
@@ -8,35 +8,14 @@
 
 .grid-container {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 10px;
-}
-.grid-item {
-  background-color: #f0f0f0;
+  grid-template-columns: repeat(3, 1fr); /* Three columns of equal width */
+  grid-gap: 20px; /* Gap between grid items */
   padding: 20px;
-  border: 1px solid #ccc;
 }
-.grid-item:nth-child(1) {
-  grid-column: 1 / 2;
-  grid-row: 1 / 2;
-}
-.grid-item:nth-child(2) {
-  grid-column: 2 / -2;
-  grid-row: 2 / -1;
-}
-.grid-item:nth-child(3) {
-  grid-column: 1 / 2;
-  grid-row: 3 / 4;
-}
-.grid-item:nth-child(4) {
-  grid-column: 2 / -2;
-  grid-row: 3 / 4;
-}
-.grid-item:nth-child(5) {
-  grid-column: 1 / 2;
-  grid-row: 4 / 4;
-}
-.grid-item:nth-child(6) {
-  grid-column: 2 / -2;
-  grid-row: 4 / 4;
+
+.grid-item {
+  background-color: #3498db;
+  color: #fff;
+  text-align: center;
+  padding: 20px;
 }
